# Proyecto1

./: ClasesCliente.h  ClasesServidor.h  Cliente.cpp  Doxyfile  Mensaje.cpp  README.md  Servidor.cpp  Test.cpp  TestMensaje.cpp  TestSala.cpp  Usuario.cpp  doxygen.sh  include.h  meson.build  tipos.h
docs/html/: ClasesCliente_8h.html  ClasesCliente_8h.js  ClasesCliente_8h_source.html  ClasesServidor_8h.html  ClasesServidor_8h.js  ClasesServidor_8h_source.html  Cliente_8cpp.html  Cliente_8cpp.js  Mensaje_8cpp.html  README_8md.html  Servidor_8cpp.html  Servidor_8cpp.js  TestMensaje_8cpp.html  TestMensaje_8cpp.js  TestSala_8cpp.html  TestSala_8cpp.js  Usuario_8cpp.html  annotated.html  annotated_dup.js  classControlCliente-members.html  classControlCliente.html  classControlCliente.js  classInterfaz-members.html  classInterfaz.html  classInterfaz.js  classMensaje-members.html  classMensaje.html  classMensaje.js  classSala-members.html  classSala.html  classSala.js  classUsuario-members.html  classUsuario.html  classUsuario.js  classes.html  files.html  files_dup.js  functions.html  functions_func.html  globals.html  (+17 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  (+57 more)
docs/latex/: ClasesCliente_8h.tex  ClasesServidor_8h.tex  Cliente_8cpp.tex  Mensaje_8cpp.tex  README_8md.tex  Servidor_8cpp.tex  TestMensaje_8cpp.tex  TestSala_8cpp.tex  Usuario_8cpp.tex  annotated.tex  classControlCliente.tex  classInterfaz.tex  classMensaje.tex  classSala.tex  classUsuario.tex  files.tex  h_8h.tex  refman.tex  tipos_8h.tex
